# aw-export-timewarrior

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DESIGN.md  Makefile  README.md  TESTING.md  TODO.md  pyproject.toml  track_afk_from_journal.sh  working_hours_events.json
.github/workflows/: ci.yml  publish.yml
docs/: CODE_REVIEW.md  COMMAND_CAPTURE.md  EXPORTER_REFACTORING_PLAN.md  PROJECT_SPLIT_PLAN.md  README.md  REFACTORING_PRIORITIES.md  STATE_MANAGEMENT_REFACTORING.md  TESTING.md  TODO.md  TRACKING_ALGORITHM.md  cli_refactoring_plan.md  compare_mode_usage.md  tmp_jq_doc
misc/: aw-export-timewarrior.service
src/aw_export_timewarrior/: aw_client.py  cli.py  compare.py  config.py  config_validation.py  event_pipeline.py  export.py  main.py  output.py  report.py  retag.py  state.py  tag_extractor.py  time_tracker.py  timew_tracker.py  utils.py
tests/: anonymize_sample.py  conftest.py  helpers.py  test_afk_overlap_bug.py  test_ask_away.py  test_cli.py  test_command_capture.py  test_compare.py  test_comprehensive.py  test_config_validation.py  test_current_event_double_counting.py  test_diff_delete_ordering.py  test_empty_tags_export.py  test_event_fetcher.py  test_export_workflow.py  test_functional.py  test_functional_timew.py  test_ignored_events_tracking.py  test_lid_afk.py  test_lid_debug.py  test_report.py  test_report_enhancements.py  test_report_exports.py  test_report_no_sleep.py  test_scope_bug.py  test_short_event_accumulation.py  test_simple.py  test_split_ask_away.py  test_state_manager.py  test_tag_extraction.py  test_tag_extractor_coverage.py  test_tag_matching_regression.py  test_time_tracker.py  test_time_tracker_coverage.py  test_timeline_display.py  test_timew_tracker.py  test_tmux.py  test_tmux_caldav_rule.py  test_tmux_fallback.py  test_unit.py
tests/fixtures/: README.md  afk_transition.json  generate_rich_dataset.py  report_test_data.json  rich_accumulator_test.json  sample_15min.json  simple_work_session.json  test_config.toml
