[project]
name = "aw-export-timewarrior"
version = "0.1.0"
description = ""
authors = [
    {name = "Tobias Brox",email = "tobias@redpill-linpro.com"}
]
readme = "README.md"
requires-python = ">=3.13<4.0"
dependencies = [
    "termcolor (>=3.1.0,<4.0.0)",
    "aw-client",
    "dateparser>=1.0.0"
]

[tool.poetry]
packages = [{include = "aw_export_timewarrior", from = "src"}]

[tool.poetry.scripts]
aw-export-timewarrior = "aw_export_timewarrior.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # Allow longer lines in tests
